Averia Libre font

--- a/docs/styles/common.css
+++ b/docs/styles/common.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: averia;
-  src: url(../fonts/Averia-Regular.ttf);
+  src: url(../fonts/AveriaLibre-Regular.ttf);
 }
 
 @font-face {
